Initial spacing fixes for input tags

--- a/src/Viewer/renderers/booleanInput.css
+++ b/src/Viewer/renderers/booleanInput.css
@@ -4,7 +4,7 @@
     position: relative;
     padding-left: 24px;
     margin-bottom: 12px;
-    margin-right: 12px;
+    margin-right: 4px; /* 2px less than other components (6px marginRight) due to the 2px marginLeft on label */
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
